<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/AllOrders"
        android:layout_width="122dp"
        android:layout_height="44dp"
        android:text="@string/all_orders"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TableLayout
        android:id="@+id/AllOrders_table"
        android:layout_width="409dp"
        android:layout_height="309dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AllOrders"
        app:layout_constraintVertical_bias="0.491"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="100">

            <TextView
                android:id="@+id/StoreName_cell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/store_name"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/OrderStatus_cell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/order_status"
                android:textAlignment="center" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>